--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Great+Vibes&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
-/* index.css */
-
+/* background */
+@keyframes moveStars {
+    0% {
+      background-position: 0 0;
+      background-color: #1b2533;
+    }
+    50% {
+      background-color: #202d3c;
+    }
+    100% {
+      background-position: 1000px 1000px;
+      background-color: #1b2533;
+    }
+  }
+  
+  body {
+    background-image: url('https://www.transparenttextures.com/patterns/stardust.png');
+    background-repeat: repeat;
+    background-size: 200px 200px;
+    background-color: #1b2533;
+    animation: moveStars 60s linear infinite;
+  }
+/* scorll bar */
 ::-webkit-scrollbar {
     background: #1E293B;
     height: 8px;
@@ -16,7 +37,26 @@
     background: transparent;
 }
   
-
+/* Font */
 @theme{
     --font-Doto: "Doto", "sans-serif";
 }
+
+/* text animation */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  @keyframes blink {
+    50% { border-color: transparent }
+  }
+  
+  .typing-effect {
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid #fff;
+    animation:
+      typing 4s steps(40, end),
+      blink 0.75s step-end infinite;
+  }
