--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,3 +67,11 @@
       typing 4s steps(40, end),
       blink 0.75s step-end infinite;
   }
+
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+  }
